# android-app

./: .gitignore  CMakeLists.txt  android-app.code-workspace  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/app/src/: main.c
app/src/main/app/src/rendering/: renderer.c  renderer.h
app/src/main/assets/app/res/shaders/: sprite.frag  sprite.vert
app/src/main/ignite/src/: ignite.h
app/src/main/ignite/src/framework/: ig_keyboard.c  ig_mouse.c  ig_window.c  ig_window.h
app/src/main/ignite/src/graphics/: ig_context.c  ig_context.h  ig_texture.c  ig_texture.h
app/src/main/ignite/src/util/: ig_log.h
scripts/: clean.py  compile_shaders.py
